--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
-  <link
-  rel="stylesheet"
+  <link rel="stylesheet" href="assets/css/variables.css">
+  <link rel="stylesheet" href="assets/css/base.css">
+  <link rel="stylesheet" href="assets/css/layout.css">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <link rel="stylesheet" href="assets/css/sections.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
   href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"/>
   <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
