--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,128 @@
-<link rel="stylesheet" href="assets/css/variables.css">
-<link rel="stylesheet" href="assets/css/base.css">
-<link rel="stylesheet" href="assets/css/layout.css">
-<link rel="stylesheet" href="assets/css/components.css">
-<link rel="stylesheet" href="assets/css/sections.css">
-<link rel="stylesheet" href="assets/css/responsive.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Projects | Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/variables.css">
+  <link rel="stylesheet" href="assets/css/base.css">
+  <link rel="stylesheet" href="assets/css/layout.css">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <link rel="stylesheet" href="assets/css/sections.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+</head>
+<body>
+  <nav class="topbar">
+    <div class="topbar-inner">
+      <a class="brand" href="index.html">
+        <span class="brand-mark">K</span>
+        <span class="brand-name">Welcome to my website! :D</span>
+      </a>
+      <div class="toplinks">
+        <a class="nav-link" href="index.html"><i class="bi bi-book"></i>Overview</a>
+        <a class="nav-link active" href="projects.html"><i class="bi bi-folder2-open"></i>Projects</a>
+        <a class="nav-link" href="resume.html"><i class="bi bi-file-earmark-person"></i>Resume</a>
+        <a class="nav-link" href="hobbies.html"><i class="bi bi-stars"></i>Hobbies</a>
+        <button class="theme-btn" id="themeToggle" type="button" aria-label="Toggle theme">+</button>
+      </div>
+    </div>
+  </nav>
+
+  <main class="projects-page pexp">
+    <div class="projects-shell pexp-shell">
+      <aside class="panel pexp-side">
+        <div class="panel-header"><h2>Overview</h2></div>
+        <div class="panel-body pexp-side-body">
+          <input id="projectSearch" class="projects-search" type="text" placeholder="Filter projects..." />
+
+          <div class="side-section">
+            <div class="side-title">Featured</div>
+            <button class="project-nav-item side-item active" type="button" data-project="portfolio">
+              <span class="side-dot"></span>
+              <span class="side-text"><b>Portfolio Website</b></span>
+            </button>
+            <button class="project-nav-item side-item" type="button" data-project="devsprite">
+              <span class="side-dot"></span>
+              <span class="side-text">DevSprite.io</span>
+            </button>
+            <button class="project-nav-item side-item" type="button" data-project="matcha">
+              <span class="side-dot"></span>
+              <span class="side-text">matcha.css</span>
+            </button>
+          </div>
+
+        </div>
+      </aside>
+
+      <section class="pexp-main">
+        <article class="panel">
+          <div class="panel-header pexp-context">
+            <span id="projectCurrentDate">Wednesday, May 8, 2024</span>
+          </div>
+          <div class="panel-body">
+            <h3 id="projectTitle" class="pexp-title">Portfolio Website</h3>
+            <p id="projectSubtitle" class="pexp-subtitle">GitHub-inspired portfolio with a custom multi-page layout.</p>
+          </div>
+        </article>
+
+        <article class="panel">
+          <div class="panel-header pexp-block-head"><h3>About</h3></div>
+          <div class="panel-body">
+            <div id="projectAbout" class="pexp-about"></div>
+            <div id="projectTags" class="pexp-tags"></div>
+          </div>
+        </article>
+
+        <div class="pexp-grid-2">
+          <article class="panel">
+            <div class="panel-header pexp-block-head"><h3>GitHub Repo</h3></div>
+            <div class="panel-body">
+              <table class="pexp-table">
+                <tr><td>Repository</td><td><a id="projectRepo" href="#" target="_blank" rel="noopener noreferrer">-</a></td></tr>
+                <tr><td>Documentation</td><td><a id="projectDocs" href="#" target="_blank" rel="noopener noreferrer">-</a></td></tr>
+                <tr><td>Language</td><td id="projectLang">-</td></tr>
+                <tr><td>Commits</td><td id="projectCommits">-</td></tr>
+                <tr><td>Stargazers</td><td id="projectStars">-</td></tr>
+                <tr><td>Created</td><td id="projectCreated">-</td></tr>
+                <tr><td>Updated</td><td id="projectUpdated">-</td></tr>
+              </table>
+            </div>
+          </article>
+
+          <article class="panel">
+            <div class="panel-header pexp-block-head"><h3>Personal Comments</h3></div>
+            <div class="panel-body">
+              <p id="projectComment" class="pexp-comment"></p>
+            </div>
+          </article>
+        </div>
+
+        <article class="panel">
+          <div class="panel-header pexp-block-head"><h3>Examples / Showcase</h3></div>
+          <div class="panel-body">
+            <div id="projectExamples" class="pexp-examples"></div>
+          </div>
+        </article>
+      </section>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="footer-left">&copy; 2026 Your Name. All rights reserved.</div>
+      <div class="footer-right">
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+        <span class="footer-dot">&middot;</span>
+        <span>Built with HTML &amp; CSS</span>
+      </div>
+    </div>
+  </footer>
+
+  <script src="assets/js/main.js"></script>
+</body>
+</html>
