--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,70 @@
-<link rel="stylesheet" href="assets/css/variables.css">
-<link rel="stylesheet" href="assets/css/base.css">
-<link rel="stylesheet" href="assets/css/layout.css">
-<link rel="stylesheet" href="assets/css/components.css">
-<link rel="stylesheet" href="assets/css/sections.css">
-<link rel="stylesheet" href="assets/css/responsive.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Resume | Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/variables.css">
+  <link rel="stylesheet" href="assets/css/base.css">
+  <link rel="stylesheet" href="assets/css/layout.css">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <link rel="stylesheet" href="assets/css/sections.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+</head>
+<body>
+  <nav class="topbar">
+    <div class="topbar-inner">
+      <a class="brand" href="index.html">
+        <span class="brand-mark">K</span>
+        <span class="brand-name">Welcome to my website! :D</span>
+      </a>
+      <div class="toplinks">
+        <a class="nav-link" href="index.html"><i class="bi bi-book"></i>Overview</a>
+        <a class="nav-link" href="projects.html"><i class="bi bi-folder2-open"></i>Projects</a>
+        <a class="nav-link active" href="resume.html"><i class="bi bi-file-earmark-person"></i>Resume</a>
+        <a class="nav-link" href="hobbies.html"><i class="bi bi-stars"></i>Hobbies</a>
+        <button class="theme-btn" id="themeToggle" type="button" aria-label="Toggle theme">+</button>
+      </div>
+    </div>
+  </nav>
+
+  <main class="page">
+    <div class="main-layout">
+      <div class="panels-container">
+        <section class="panel panel-col-mid" style="flex: 1;">
+          <div class="panel-header">
+            <h2>Resume</h2>
+          </div>
+          <div class="panel-body resume-panel-body">
+            <div class="resume-frame-wrap">
+              <iframe
+                class="resume-pdf-frame"
+                title="Resume PDF"
+                src="assets/files/resume.pdf#toolbar=0&navpanes=0&view=FitH">
+              </iframe>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <div class="footer-left">&copy; 2026 Your Name. All rights reserved.</div>
+      <div class="footer-right">
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+        <span class="footer-dot">&middot;</span>
+        <span>Built with HTML &amp; CSS</span>
+      </div>
+    </div>
+  </footer>
+
+  <script src="assets/js/main.js"></script>
+</body>
+</html>
