--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <a class="nav-link active" href="index.html"><i class="bi bi-book"></i>Overview</a>
         <a class="nav-link" href="projects.html"><i class="bi bi-folder2-open"></i>Projects</a>
         <a class="nav-link" href="resume.html"><i class="bi bi-file-earmark-person"></i>Resume</a>
-        <a class="nav-link" href="hobbies.html"><i class="bi bi-stars"></i>Hobbies</a>
+        <a class="nav-link" href="hobbies.html"><i class="bi bi-journal-richtext"></i>Blog</a>
 
-        <button class="theme-btn" id="themeToggle" type="button" aria-label="Toggle theme">+</button>
+        <button class="theme-btn" id="themeToggle" type="button" aria-label="Toggle theme"><i class="bi bi-moon-stars-fill"></i></button>
       </div>
 
     </div>
