--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
           <!-- GitHub Contributions -->
           <div class="panel panel-ghcal">
-            <div class="panel-header"><h2>GitHub contributions</h2></div>
+            <div class="panel-header"><h2>GitHub Contributions</h2></div>
             <div class="panel-body ghcal-body">
               <div class="ghcal-card">
                 <img
