--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
             <div class="side-title">Featured</div>
             <button class="project-nav-item side-item active" type="button" data-project="portfolio">
               <span class="side-dot"></span>
-              <span class="side-text"><b>Portfolio Website</b></span>
+              <span class="side-text">Portfolio Website</span>
             </button>
             <button class="project-nav-item side-item" type="button" data-project="devsprite">
               <span class="side-dot"></span>
