Button Color Changes + additions, example blog posts

--- a/hobbies.html
+++ b/hobbies.html
@@ -71,6 +71,7 @@
             <h2 id="blogTitle">About You</h2>
             <div class="blog-date" id="blogDate">Monday, January 19, 2026</div>
           </div>
+          <div class="blog-head-tags pexp-tags" id="blogMetaTags" aria-label="Blog entry tags"></div>
         </div>
 
         <div class="panel-body blog-body">
