--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
   <link rel="stylesheet" href="assets/css/variables.css">
 <link rel="stylesheet" href="assets/css/base.css">
 <link rel="stylesheet" href="assets/css/layout.css">
-<link rel="stylesheet" href="assets/css/components.css">
-<link rel="stylesheet" href="assets/css/sections.css">
-<link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="assets/css/components.css">
+  <link rel="stylesheet" href="assets/css/sections.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
-  <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
 </head>
 
@@ -77,6 +75,7 @@
       <div class="gh-bio">
         Greetings! I am a 3rd year Computer Engineering & Computer Science student at California State University, Long Beach!
       </div>
+      
       <div class="gh-links">
         <a class="gh-link" href="mailto:knguyen15235@gmail.com">
           <i class="bi bi-envelope"></i>
@@ -243,43 +242,68 @@
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/cplusplus" alt="C++" />
-                C / C++
+                <img src="https://cdn.simpleicons.org/openjdk" alt="Java" />
+                Java
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/mysql" alt="SQL" />
+                <img src="https://cdn.simpleicons.org/javascript" alt="JavaScript" />
+                JavaScript
+              </div>
+
+              <div class="skill-chip">
+                <img src="https://cdn.simpleicons.org/html5" alt="HTML/CSS" />
+                HTML/CSS
+              </div>
+
+              <div class="skill-chip">
+                <img src="https://cdn.simpleicons.org/cplusplus" alt="C/C++" />
+                C/C++
+              </div>
+
+              <div class="skill-chip">
+                <img src="https://cdn.simpleicons.org/postgresql" alt="SQL" />
                 SQL
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/pytorch" alt="PyTorch" />
-                PyTorch
+                <img src="https://cdn.simpleicons.org/latex" alt="LaTeX" />
+                LaTeX
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/react" alt="React" />
-                React
+                <img src="https://cdn.simpleicons.org/react" alt="React.js" />
+                React.js
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/nextdotjs" alt="Next.js" />
-                Next.js
+                <img src="https://cdn.simpleicons.org/nodedotjs" alt="Node.js" />
+                Node.js
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/fastapi" alt="FastAPI" />
-                FastAPI
+                <img src="https://cdn.simpleicons.org/amazonapprunner" alt="AWS AppRunner" />
+                AWS AppRunner
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/opencv" alt="OpenCV" />
-                OpenCV
+                <img src="https://cdn.simpleicons.org/amazonelasticcontainerregistry" alt="AWS ECR" />
+                AWS ECR
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/huggingface" alt="Hugging Face" />
-                Hugging Face
+                <img src="https://cdn.simpleicons.org/netlify" alt="Netlify" />
+                Netlify
+              </div>
+
+              <div class="skill-chip">
+                <img src="https://cdn.simpleicons.org/git" alt="Git" />
+                Git
+              </div>
+
+              <div class="skill-chip">
+                <img src="https://cdn.simpleicons.org/github" alt="GitHub" />
+                GitHub
               </div>
 
               <div class="skill-chip">
@@ -288,8 +312,13 @@
               </div>
 
               <div class="skill-chip">
-                <img src="https://cdn.simpleicons.org/amazonaws" alt="AWS" />
-                AWS
+                <img src="https://cdn.simpleicons.org/visualstudiocode" alt="VS Code" />
+                VS Code
+              </div>
+
+              <div class="skill-chip">
+                <img src="https://cdn.simpleicons.org/postgresql" alt="PostgreSQL" />
+                PostgreSQL
               </div>
 
             </div>
